Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31865

QHostInfo does not return IPv6 addresses

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.4, 5.14.0 Alpha
    • 5.0.2, 5.12.3
    • Network
    • None
    • Windows 7 64bit
      macOS 10.14
    • a8a05b00fc8401e518c70b5deffc383d1081ede3 (qt/qtbase/5.12)

    Description

      QHostInfo::fromName("google.com") returns only IPv4 addresses. The output of QHostInfo::addresses() is:
      (QHostAddress("173.194.39.199"),QHostAddress("173.194.39.200"),QHostAddress("173.194.39.201"),QHostAddress("173.194.39.206"),QHostAddress("173.194.39.192"),QHostAddress("173.194.39.193"),QHostAddress("173.194.39.194"),QHostAddress("173.194.39.195"),QHostAddress("173.194.39.196"),QHostAddress("173.194.39.197"),QHostAddress("173.194.39.198"))

      QDnsLookup for A record on google.com returns all the above IPv4 addresses, but it also returns IPv6 address for AAAA record: 2a00:1450:4017:800::1007

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vhilshei Volker Hilsheimer
            marcus.fr Marcus Frenkel
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes